--- a/Rob-Black/UserSettings/Search.settings
+++ b/Rob-Black/UserSettings/Search.settings
@@ -8,6 +8,9 @@ onBoardingDoNotAskAgain = true
 showPackageIndexes = false
 showStatusBar = false
 scopes = {
+	"last_search.310DEAF3" = "sd"
+	"OpenInspectorPreview.310DEAF3" = "0"
+	"currentGroup.310DEAF3" = "all"
 }
 providers = {
 	adb = {
@@ -59,6 +62,7 @@ providers = {
 objectSelectors = {
 }
 recentSearches = [
+	"sd"
 ]
 searchItemFavorites = [
 ]
